--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     const fileInput = document.getElementById("imageUpload");
 
     const logo = new Image();
-    logo.src = "SimpcoinLogo.png";
+    logo.src = "/SimpcoinLogo.png";
 
     let bgImage = null;
     let logoX = 300, logoY = 200, logoWidth = 150;
