--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 </head>
 <body>
   <h1>Simpcoin Image Maker</h1>
+  <input type="file" id="imageUpload" accept="image/*" />
   <label for="imageUpload" class="action-button">Choose Image</label>
-  <input type="file" id="imageUpload" accept="image/*"/>
   <canvas id="canvas"></canvas>
   <div>
     <button class="action-button" onclick="downloadImage()">Download</button>
@@ -47,153 +47,76 @@
   </div>
 
   <script>
-window.onload = function() {
+    window.onload = function () {
+      const canvas = document.getElementById("canvas");
+      const ctx = canvas.getContext("2d");
+      const fileInput = document.getElementById("imageUpload");
 
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
-    const fileInput = document.getElementById("imageUpload");
+      const logo = new Image();
+      logo.src = "/SimpcoinLogo.png";
 
-    const logo = new Image();
-    logo.src = "SimpcoinLogo.png";
+      let bgImage = null;
+      let logoX = 300, logoY = 200, logoWidth = 150;
+      const logoAspectRatio = 1 / 3;
+      let dragging = false;
+      let offsetX = 0, offsetY = 0;
+      let initialPinchDistance = null;
+      let lastWidth = logoWidth;
 
-    let bgImage = null;
-    let logoX = 300, logoY = 200, logoWidth = 150;
-    const logoAspectRatio = 1 / 3;
-    let dragging = false;
-    let offsetX = 0, offsetY = 0;
-    let initialPinchDistance = null;
-    let lastWidth = logoWidth;
+      function resizeCanvas() {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight - 140;
+      }
+      window.addEventListener("resize", resizeCanvas);
+      resizeCanvas();
 
-    function resizeCanvas() {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight - 140;
-    }
-    window.addEventListener("resize", resizeCanvas);
-    resizeCanvas();
-
-    fileInput.addEventListener("change", (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = (event) => {
-        bgImage = new Image();
-        bgImage.onload = () => {
-          resetLogo();
+      fileInput.addEventListener("change", (e) => {
+        const file = e.target.files[0];
+        if (!file) return;
+        const reader = new FileReader();
+        reader.onload = (event) => {
+          bgImage = new Image();
+          bgImage.onload = () => resetLogo();
+          bgImage.src = event.target.result;
         };
-        bgImage.src = event.target.result;
-      };
-      reader.readAsDataURL(file);
-    });
+        reader.readAsDataURL(file);
+      });
 
-    function resetLogo() {
-      logoWidth = 150;
-      logoX = canvas.width / 2 - logoWidth / 2;
-      logoY = canvas.height / 2 - (logoWidth * logoAspectRatio) / 2;
-    }
+      function resetLogo() {
+        logoWidth = 150;
+        logoX = canvas.width / 2 - logoWidth / 2;
+        logoY = canvas.height / 2 - (logoWidth * logoAspectRatio) / 2;
+      }
 
-    function downloadImage() {
-      const link = document.createElement("a");
-      link.download = "simpcoin_image.png";
-      link.href = canvas.toDataURL("image/png");
-      link.click();
-    }
+      function downloadImage() {
+        const link = document.createElement("a");
+        link.download = "simpcoin_image.png";
+        link.href = canvas.toDataURL("image/png");
+        link.click();
+      }
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      if (bgImage) {
-        const imgAspect = bgImage.width / bgImage.height;
-        const canvasAspect = canvas.width / canvas.height;
-        let drawWidth, drawHeight;
-        if (imgAspect > canvasAspect) {
-          drawWidth = canvas.width;
-          drawHeight = canvas.width / imgAspect;
-        } else {
-          drawHeight = canvas.height;
-          drawWidth = canvas.height * imgAspect;
+      function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        if (bgImage) {
+          const imgAspect = bgImage.width / bgImage.height;
+          const canvasAspect = canvas.width / canvas.height;
+          let drawWidth, drawHeight;
+          if (imgAspect > canvasAspect) {
+            drawWidth = canvas.width;
+            drawHeight = canvas.width / imgAspect;
+          } else {
+            drawHeight = canvas.height;
+            drawWidth = canvas.height * imgAspect;
+          }
+          const dx = (canvas.width - drawWidth) / 2;
+          const dy = (canvas.height - drawHeight) / 2;
+          ctx.drawImage(bgImage, dx, dy, drawWidth, drawHeight);
         }
-        const dx = (canvas.width - drawWidth) / 2;
-        const dy = (canvas.height - drawHeight) / 2;
-        ctx.drawImage(bgImage, dx, dy, drawWidth, drawHeight);
-      }
-      const logoHeight = logoWidth * logoAspectRatio;
-      ctx.drawImage(logo, logoX, logoY, logoWidth, logoHeight);
-      requestAnimationFrame(draw);
-};
-    }
-
-    function getTouchPos(touch) {
-      const rect = canvas.getBoundingClientRect();
-      return {
-        x: touch.clientX - rect.left,
-        y: touch.clientY - rect.top
-      };
-    }
-
-    canvas.addEventListener("mousedown", (e) => {
-      const rect = canvas.getBoundingClientRect();
-      const x = e.clientX - rect.left;
-      const y = e.clientY - rect.top;
-      const logoHeight = logoWidth * logoAspectRatio;
-      if (x >= logoX && x <= logoX + logoWidth && y >= logoY && y <= logoY + logoHeight) {
-        dragging = true;
-        offsetX = x - logoX;
-        offsetY = y - logoY;
-      }
-    });
-
-    canvas.addEventListener("mousemove", (e) => {
-      if (dragging) {
-        const rect = canvas.getBoundingClientRect();
-        logoX = e.clientX - rect.left - offsetX;
-        logoY = e.clientY - rect.top - offsetY;
-      }
-    });
-
-    canvas.addEventListener("mouseup", () => dragging = false);
-    canvas.addEventListener("mouseleave", () => dragging = false);
-
-    canvas.addEventListener("touchstart", (e) => {
-      if (e.touches.length === 1) {
-        const pos = getTouchPos(e.touches[0]);
         const logoHeight = logoWidth * logoAspectRatio;
-        if (pos.x >= logoX && pos.x <= logoX + logoWidth && pos.y >= logoY && pos.y <= logoY + logoHeight) {
-          dragging = true;
-          offsetX = pos.x - logoX;
-          offsetY = pos.y - logoY;
-        }
-      } else if (e.touches.length === 2) {
-        const dx = e.touches[0].clientX - e.touches[1].clientX;
-        const dy = e.touches[0].clientY - e.touches[1].clientY;
-        initialPinchDistance = Math.sqrt(dx * dx + dy * dy);
-        lastWidth = logoWidth;
+        ctx.drawImage(logo, logoX, logoY, logoWidth, logoHeight);
+        requestAnimationFrame(draw);
       }
-      e.preventDefault();
-    }, { passive: false });
 
-    canvas.addEventListener("touchmove", (e) => {
-      if (dragging && e.touches.length === 1) {
-        const pos = getTouchPos(e.touches[0]);
-        logoX = pos.x - offsetX;
-        logoY = pos.y - offsetY;
-      } else if (e.touches.length === 2) {
-        const dx = e.touches[0].clientX - e.touches[1].clientX;
-        const dy = e.touches[0].clientY - e.touches[1].clientY;
-        const currentDistance = Math.sqrt(dx * dx + dy * dy);
-        if (initialPinchDistance) {
-          const scale = currentDistance / initialPinchDistance;
-          logoWidth = Math.max(30, Math.min(1000, lastWidth * scale));
-        }
-      }
-      e.preventDefault();
-    }, { passive: false });
-
-    canvas.addEventListener("touchend", () => {
-      dragging = false;
-      initialPinchDistance = null;
-    });
-
-    requestAnimationFrame(draw);
-};
-  </script>
-</body>
-</html>
+      function getTouchPos(touch) {
+        const rect = canvas.getBoundingClientRect();
+        return {
