--- a/simpcoin_image_maker.html
+++ b/simpcoin_image_maker.html
@@ -189,7 +189,7 @@
           document.body.removeChild(link);
 
           const tweetText = "Just made this with Simpcoin Image Maker! #Simpcoin";
-          const tweetURL = `https://twitter.com/intent/tweet?text=${encodeURIComponent(tweetText)}&url=${encodeURIComponent(link.href)}`;
+          const tweetURL = `https://x.com/intent/tweet?text=${encodeURIComponent(tweetText)}&url=${encodeURIComponent(link.href)}`;
 
           window.open(tweetURL, "_blank");
         });
