--- a/index.html
+++ b/index.html
@@ -92,9 +92,6 @@
       let offsetY = 0;
       let scale = 1;
 
-      let lastTouchDistance = 0;
-      let isPinching = false;
-
       const canvas = document.getElementById("canvas");
       const ctx = canvas.getContext("2d");
       const fileInput = document.getElementById("imageUpload");
@@ -162,18 +159,15 @@
         }
       }
 
-      // Mouse and Touch Event Listeners
-      let isPinchStarted = false;
+      // Mouse and Touch Event Listeners for dragging
       canvas.addEventListener("mousedown", (e) => {
-        if (!isPinching) {
-          const rect = canvas.getBoundingClientRect();
-          const x = e.clientX - rect.left;
-          const y = e.clientY - rect.top;
-          if (x >= logoX && x <= logoX + logoWidth && y >= logoY && y <= logoY + logoHeight) {
-            dragging = true;
-            offsetX = x - logoX;
-            offsetY = y - logoY;
-          }
+        const rect = canvas.getBoundingClientRect();
+        const x = e.clientX - rect.left;
+        const y = e.clientY - rect.top;
+        if (x >= logoX && x <= logoX + logoWidth && y >= logoY && y <= logoY + logoHeight) {
+          dragging = true;
+          offsetX = x - logoX;
+          offsetY = y - logoY;
         }
       });
 
@@ -189,48 +183,11 @@
       canvas.addEventListener("mouseup", () => dragging = false);
       canvas.addEventListener("mouseleave", () => dragging = false);
 
+      // Logo size scaling via slider
       logoSizeSlider.addEventListener("input", (e) => {
         scale = e.target.value / 300;
         draw();
       });
-
-      // Mobile pinch-to-scale functionality
-      canvas.addEventListener("touchstart", (e) => {
-        if (e.touches.length === 2) {
-          const touch1 = e.touches[0];
-          const touch2 = e.touches[1];
-          lastTouchDistance = getDistance(touch1, touch2);
-          isPinching = true;
-          isPinchStarted = true;
-        }
-      }, { passive: false });
-
-      canvas.addEventListener("touchmove", (e) => {
-        if (isPinching && e.touches.length === 2) {
-          const touch1 = e.touches[0];
-          const touch2 = e.touches[1];
-          const currentTouchDistance = getDistance(touch1, touch2);
-          const scaleChange = currentTouchDistance / lastTouchDistance;
-          scale *= scaleChange;
-          lastTouchDistance = currentTouchDistance;
-          draw();
-          e.preventDefault();
-        }
-      }, { passive: false });
-
-      canvas.addEventListener("touchend", () => {
-        if (isPinchStarted) {
-          isPinching = false;
-          lastTouchDistance = 0;
-          isPinchStarted = false;
-        }
-      });
-
-      function getDistance(touch1, touch2) {
-        const dx = touch2.clientX - touch1.clientX;
-        const dy = touch2.clientY - touch1.clientY;
-        return Math.sqrt(dx * dx + dy * dy);
-      }
 
       document.getElementById("saveBtn").addEventListener("click", () => {
         const link = document.createElement("a");
