--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       text-align: center;
       height: 100%;
       overflow-x: hidden;
-      touch-action: none; /* Prevent scrolling during touch drag */
     }
     canvas {
       display: block;
@@ -21,17 +20,8 @@
       background: white;
       border: 2px solid black;
       max-width: 100%;
-      touch-action: none;
+      touch-action: none; /* Only prevent gestures on canvas */
     }
-    .action-button {
-      transition: transform 0.1s, box-shadow 0.1s;
-    }
-
-    .action-button:active {
-      transform: scale(0.97);
-      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
-    }
-
     .action-button {
       background: #ff1a1a;
       color: white;
@@ -41,6 +31,11 @@
       cursor: pointer;
       margin: 10px 8px;
       border: none;
+      transition: transform 0.1s, box-shadow 0.1s;
+    }
+    .action-button:active {
+      transform: scale(0.97);
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
     }
     #imageUpload {
       margin: 10px;
@@ -57,178 +52,162 @@
   <button id="shareXBtn" class="action-button">Share to X</button>
 
   <script>
-    window.addEventListener("DOMContentLoaded", () => {
-      const logo = new Image();
-      logo.crossOrigin = "anonymous";
-      logo.src = "https://raw.githubusercontent.com/CryptoGatsu/simpcoin-image-maker/35cf42c8176ce80664d0358556cd365756999871/SimpcoinLogo.png";
-      let logoReady = false;
+    const logo = new Image();
+    logo.crossOrigin = "anonymous";
+    logo.src = "https://raw.githubusercontent.com/CryptoGatsu/simpcoin-image-maker/35cf42c8176ce80664d0358556cd365756999871/SimpcoinLogo.png";
 
-      let logoX = 0;
-      let logoY = 0;
-      let logoWidth = 450; // Increased from 300 to 450
-      let logoHeight = logoWidth / 3;
-      let dragging = false;
-      let offsetX = 0;
-      let offsetY = 0;
+    let logoReady = false;
+    let logoX = 0, logoY = 0;
+    let logoWidth = 450, logoHeight = logoWidth / 3;
+    let dragging = false;
+    let offsetX = 0, offsetY = 0;
 
-      const canvas = document.getElementById("canvas");
-      const ctx = canvas.getContext("2d");
-      const fileInput = document.getElementById("imageUpload");
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+    const fileInput = document.getElementById("imageUpload");
 
-      let uploadedImage = new Image();
-      let imageScale = 1.5;
-      let imageLoaded = false;
+    let uploadedImage = new Image();
+    let imageLoaded = false;
 
-      logo.onload = () => {
-        logoReady = true;
-        logoX = canvas.width / 2 - logoWidth / 2;
-        logoY = canvas.height / 2 - logoHeight / 2;
-        if (imageLoaded) draw();
+    logo.onload = () => {
+      logoReady = true;
+      centerLogo();
+      if (imageLoaded) draw();
+    };
+
+    fileInput.addEventListener("change", (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
+
+      const reader = new FileReader();
+      reader.onload = function(evt) {
+        uploadedImage = new Image();
+        uploadedImage.onload = () => {
+          imageLoaded = true;
+          resizeCanvasToImage();
+          centerLogo();
+          draw();
+        };
+        uploadedImage.src = evt.target.result;
       };
+      reader.readAsDataURL(file);
+    });
 
-      fileInput.addEventListener("change", (e) => {
-        const file = e.target.files[0];
-        if (!file) return;
+    function resizeCanvasToImage() {
+      const maxWidth = window.innerWidth * 0.9;
+      const maxHeight = window.innerHeight * 0.6;
+      const aspectRatio = uploadedImage.width / uploadedImage.height;
 
-        const reader = new FileReader();
-        reader.onload = function(evt) {
-          uploadedImage = new Image();
-          uploadedImage.onload = () => {
-            imageLoaded = true;
-            resizeCanvasToImage();
-            logoX = canvas.width / 2 - logoWidth / 2;
-            logoY = canvas.height / 2 - logoHeight / 2;
-            draw();
-          };
-          uploadedImage.src = evt.target.result;
-        };
-        reader.readAsDataURL(file);
-      });
+      let drawWidth = uploadedImage.width;
+      let drawHeight = uploadedImage.height;
 
-      function resizeCanvasToImage() {
-        const maxWidth = window.innerWidth * 0.9;
-        const maxHeight = window.innerHeight * 0.75;
-        const aspectRatio = uploadedImage.width / uploadedImage.height;
-
-        let drawWidth = uploadedImage.width * imageScale;
-        let drawHeight = uploadedImage.height * imageScale;
-
-        if (drawWidth > maxWidth) {
-          drawWidth = maxWidth;
-          drawHeight = drawWidth / aspectRatio;
-        }
-
-        if (drawHeight > maxHeight) {
-          drawHeight = maxHeight;
-          drawWidth = drawHeight * aspectRatio;
-        }
-
-        canvas.width = drawWidth;
-        canvas.height = drawHeight;
-        canvas.style.marginTop = `${(window.innerHeight - drawHeight) / 2}px`;
+      if (drawWidth > maxWidth) {
+        drawWidth = maxWidth;
+        drawHeight = drawWidth / aspectRatio;
+      }
+      if (drawHeight > maxHeight) {
+        drawHeight = maxHeight;
+        drawWidth = drawHeight * aspectRatio;
       }
 
-      function draw() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.drawImage(uploadedImage, 0, 0, canvas.width, canvas.height);
+      canvas.width = drawWidth;
+      canvas.height = drawHeight;
+    }
 
-        if (logoReady) {
-          ctx.drawImage(logo, logoX, logoY, logoWidth, logoHeight);
-        }
+    function centerLogo() {
+      logoX = canvas.width / 2 - logoWidth / 2;
+      logoY = canvas.height / 2 - logoHeight / 2;
+    }
+
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.drawImage(uploadedImage, 0, 0, canvas.width, canvas.height);
+      if (logoReady) {
+        ctx.drawImage(logo, logoX, logoY, logoWidth, logoHeight);
       }
+    }
 
-      function getTouchPos(touch) {
+    // Desktop Drag
+    canvas.addEventListener("mousedown", (e) => {
+      const rect = canvas.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const y = e.clientY - rect.top;
+      if (x >= logoX && x <= logoX + logoWidth && y >= logoY && y <= logoY + logoHeight) {
+        dragging = true;
+        offsetX = x - logoX;
+        offsetY = y - logoY;
+      }
+    });
+    canvas.addEventListener("mousemove", (e) => {
+      if (dragging) {
         const rect = canvas.getBoundingClientRect();
-        return {
-          x: touch.clientX - rect.left,
-          y: touch.clientY - rect.top
-        };
+        logoX = e.clientX - rect.left - offsetX;
+        logoY = e.clientY - rect.top - offsetY;
+        draw();
       }
+    });
+    canvas.addEventListener("mouseup", () => dragging = false);
+    canvas.addEventListener("mouseleave", () => dragging = false);
 
-      canvas.addEventListener("mousedown", (e) => {
+    // Mobile Drag
+    canvas.addEventListener("touchstart", (e) => {
+      if (e.touches.length === 1) {
         const rect = canvas.getBoundingClientRect();
-        const x = e.clientX - rect.left;
-        const y = e.clientY - rect.top;
+        const x = e.touches[0].clientX - rect.left;
+        const y = e.touches[0].clientY - rect.top;
         if (x >= logoX && x <= logoX + logoWidth && y >= logoY && y <= logoY + logoHeight) {
           dragging = true;
           offsetX = x - logoX;
           offsetY = y - logoY;
-        }
-      });
-
-      canvas.addEventListener("mousemove", (e) => {
-        if (dragging) {
-          const rect = canvas.getBoundingClientRect();
-          logoX = e.clientX - rect.left - offsetX;
-          logoY = e.clientY - rect.top - offsetY;
-          draw();
-        }
-      });
-
-      canvas.addEventListener("mouseup", () => dragging = false);
-      canvas.addEventListener("mouseleave", () => dragging = false);
-
-      canvas.addEventListener("touchstart", (e) => {
-        if (e.touches.length === 1) {
-          const touch = getTouchPos(e.touches[0]);
-          if (touch.x >= logoX && touch.x <= logoX + logoWidth && touch.y >= logoY && touch.y <= logoY + logoHeight) {
-            dragging = true;
-            offsetX = touch.x - logoX;
-            offsetY = touch.y - logoY;
-            e.preventDefault();
-          }
-        }
-      }, { passive: false });
-
-      canvas.addEventListener("touchmove", (e) => {
-        if (dragging && e.touches.length === 1) {
-          const touch = getTouchPos(e.touches[0]);
-          logoX = touch.x - offsetX;
-          logoY = touch.y - offsetY;
-          draw();
           e.preventDefault();
         }
-      }, { passive: false });
+      }
+    }, { passive: false });
 
-      canvas.addEventListener("touchend", () => dragging = false);
-
-      document.getElementById("saveBtn").addEventListener("click", () => {
-        const link = document.createElement("a");
-        link.download = "simpcoin-image.png";
-        link.href = canvas.toDataURL("image/png");
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-      });
-
-      document.getElementById("resetLogoBtn").addEventListener("click", () => {
-        logoX = canvas.width / 2 - logoWidth / 2;
-        logoY = canvas.height / 2 - logoHeight / 2;
+    canvas.addEventListener("touchmove", (e) => {
+      if (dragging && e.touches.length === 1) {
+        const rect = canvas.getBoundingClientRect();
+        const x = e.touches[0].clientX - rect.left;
+        const y = e.touches[0].clientY - rect.top;
+        logoX = x - offsetX;
+        logoY = y - offsetY;
         draw();
-      });
+        e.preventDefault();
+      }
+    }, { passive: false });
 
-      document.getElementById("shareXBtn").addEventListener("click", () => {
-        canvas.toBlob((blob) => {
-          if (!blob) {
-            alert("Could not share image. Please try again.");
-            return;
-          }
+    canvas.addEventListener("touchend", () => dragging = false);
 
-          const file = new File([blob], "simpcoin-image.png", { type: "image/png" });
-          const data = {
-            files: [file],
-            text: "Just made this with Simpcoin Image Maker! #Simpcoin",
-          };
+    // Save
+    document.getElementById("saveBtn").addEventListener("click", () => {
+      const link = document.createElement("a");
+      link.download = "simpcoin-image.png";
+      link.href = canvas.toDataURL("image/png");
+      link.click();
+    });
 
-          if (navigator.canShare && navigator.canShare(data)) {
-            navigator.share(data).catch((err) => {
-              alert("Failed to share. Try using your mobile browser.");
-              console.error(err);
-            });
-          } else {
-            alert("Sharing not supported in this browser. Try using a mobile browser.");
-          }
-        });
+    // Reset
+    document.getElementById("resetLogoBtn").addEventListener("click", () => {
+      centerLogo();
+      draw();
+    });
+
+    // Share to X
+    document.getElementById("shareXBtn").addEventListener("click", () => {
+      canvas.toBlob((blob) => {
+        if (!blob) return alert("Could not create image.");
+
+        const file = new File([blob], "simpcoin-image.png", { type: "image/png" });
+        const shareData = {
+          files: [file],
+          text: "Just made this with Simpcoin Image Maker! #Simpcoin",
+        };
+
+        if (navigator.canShare && navigator.canShare(shareData)) {
+          navigator.share(shareData).catch(() => alert("Share failed"));
+        } else {
+          alert("Sharing not supported in this browser.");
+        }
       });
     });
   </script>
