--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       padding: 12px 24px;
       font-size: 18px;
       border-radius: 8px;
-      cursor: pointer;
-      margin: 10px 8px;
+      margin: 24px 16px;
       border: none;
       transition: transform 0.1s, box-shadow 0.1s;
     }
@@ -41,11 +40,11 @@
 </head>
 <body>
   <h1>Simpcoin Image Maker</h1>
+  <canvas id="canvas"></canvas>
   <div id="uploadWrapper">
     <label for="imageUpload" class="action-button">Choose Image</label>
     <input type="file" id="imageUpload" accept="image/*" style="display: none;" />
   </div>
-  <canvas id="canvas"></canvas>
   <button id="saveBtn" class="action-button">Save Image</button>
   <button id="resetLogoBtn" class="action-button">Reset Logo</button>
   <button id="randomLogoBtn" class="action-button">Randomize Logo</button>
@@ -57,7 +56,7 @@
 
     let logoReady = false;
     let logoX = 0, logoY = 0;
-    let logoWidth = 0, logoHeight = 0;
+    let logoWidth = 1800, logoHeight = logoWidth / 3;
     let dragging = false;
     let offsetX = 0, offsetY = 0;
 
@@ -72,10 +71,6 @@
       logoReady = true;
       if (!imageLoaded) centerLogo();
       if (imageLoaded) draw();
-          const wrapper = document.getElementById('uploadWrapper');
-          if (wrapper && canvas && canvas.parentNode) {
-            canvas.parentNode.insertBefore(wrapper, canvas.nextSibling);
-          }
     };
 
     fileInput.addEventListener("change", (e) => {
@@ -101,10 +96,6 @@
       const drawHeight = uploadedImage.height * 2;
       canvas.width = drawWidth;
       canvas.height = drawHeight;
-
-      // Auto scale logo to 25% of canvas width
-      logoWidth = 1800;
-      logoHeight = logoWidth / 3;
     }
 
     function centerLogo() {
